src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead from Mktg - MQL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Marketing Qualified Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sales Accepted Lead</fullName>
        </values>
        <values>
            <fullName>Sales Qualified Lead</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Lead - SGL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Sales Accepted Lead</fullName>
        </values>
        <values>
            <fullName>Sales Qualified Lead</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>Alternate Email</description>
        <label>Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_to_talk_to_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask to talk to Engineering Support/Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;100 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-1000 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000-5000 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000+ Employees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Entrance_Date_MQL__c</fullName>
        <label>Entrance Date - MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Entrance_Date_SAL__c</fullName>
        <label>Entrance Date - SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Entrance_Date_SQL__c</fullName>
        <label>Entrance Date - SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Entrance_Date_Unqualified__c</fullName>
        <label>Entrance Date - Unqualified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Last_Activity_Date__c</fullName>
        <description>Date/Time field to capture last activity date.</description>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Geo__c</fullName>
        <label>Lead Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Sub_Geo__c</fullName>
        <label>Lead Sub Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Time_MQL_to_SAL__c</fullName>
        <formula>( Core_Entrance_Date_SAL__c -  Core_Entrance_Date_MQL__c )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time - MQL to SAL</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Time_SAL_to_SQL__c</fullName>
        <formula>( Core_Entrance_Date_SQL__c -  Core_Entrance_Date_SAL__c )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time - SAL to SQL</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Time_Unqualified_to_SAL__c</fullName>
        <formula>(Core_Entrance_Date_SAL__c -  CreatedDate)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time - Unqualified to SAL</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Architecture__c</fullName>
        <label>Current Architecture</label>
        <picklist>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPU/GPGPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel Xscale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Competing Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuperH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Consent_for_Marketing_Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Consent for Marketing Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <description>The Contact ID from Eloqua when leads are coming from Eloqua</description>
        <label>Eloqua Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Job Function</description>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration/Clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications/Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant/Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Quality/Support Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBusiness Manager/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Level Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Management and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Management Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Business Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media and Design</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Point__c</fullName>
        <label>Lead Conversion Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Opt_In_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the customer has given consent to talk to Intel sales team for this project</description>
        <inlineHelpText>Check to indicate that customer has opted in for communication for this lead</inlineHelpText>
        <label>Customer Consent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <label>Lead Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>if ( ISPICKVAL( LeadSource , &quot;Employee Referral&quot;), 4,
if ( ISPICKVAL( LeadSource , &quot;External Referral&quot;), 6,
if ( ISPICKVAL( LeadSource , &quot;Partner&quot;), 8,
if( ISPICKVAL( LeadSource , &quot;Public Relations&quot;), 10,
if( ISPICKVAL( LeadSource , &quot;Seminar - Internal&quot;), 4,
if( ISPICKVAL( LeadSource , &quot;Seminar - Partner&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Customer Support&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Other&quot;), 4,
if( ISPICKVAL( LeadSource , &quot;EDC Website&quot;), 10,
if( ISPICKVAL( LeadSource , &quot;Community&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Word of Mouth&quot;), 7,
if( ISPICKVAL( LeadSource , &quot;Trade Show&quot;), 6,
if( ISPICKVAL( LeadSource , &quot;Web&quot;), 0, 0)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_State__c</fullName>
        <label>Lead State</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Priority__c</fullName>
        <description>Score from Marketing System</description>
        <label>Marketing Priority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <picklist>
            <picklistValues>
                <fullName>Kontron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radisys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Intel® Atom™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Core™ Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® EP80579 Integrated Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel® Xeon® Processors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid State Drives (SSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <label>Project Size</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;$10,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000,000 - $5,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000,000 - $1,000,0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$1,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Timeframe__c</fullName>
        <label>Project Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>0-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-24 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;24 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <description>Rejection Comments</description>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejection__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate see comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not my Account/Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Information - See comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Revenue Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Unreachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covered Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - See Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Sales Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-ESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_geography__c</fullName>
        <label>Sub Geography</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>META</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAIWAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Sales Qualified Lead</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.New_Lead_SGL</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>xx_Partner_Kontron</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.New_Lead_SGL</value>
        </filters>
        <label>xx-Partner-Kontron</label>
        <queue>Partner_Kontron</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>New_Lead_SGL</fullName>
        <active>true</active>
        <businessProcess>New Lead - SGL</businessProcess>
        <label>New Lead SGL</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_MQL_Lead</fullName>
        <active>false</active>
        <businessProcess>Lead from Mktg - MQL</businessProcess>
        <label>New MQL Lead</label>
    </recordTypes>
    <validationRules>
        <fullName>Embargo_Country</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Country__c, &quot;Cuba&quot;) ||
ispickval(Country__c, &quot;Iran&quot;) ||
ispickval(Country__c, &quot;North Korea&quot;) ||
ispickval(Country__c, &quot;Sudan&quot;) ||
ispickval(Country__c, &quot;Syria&quot;)</errorConditionFormula>
        <errorMessage>You can&apos;t create a Lead from an Embargo Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MQL_check</fullName>
        <active>true</active>
        <description>Cannot Manually change status to &quot;MQL&quot;</description>
        <errorConditionFormula>ISPICKVAL ( Status, &quot;Marketing Qualified Lead&quot;)</errorConditionFormula>
        <errorMessage>You cannot select Stage: &quot;Marketing Qualified Lead&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAL_check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Sales Accepted Lead&quot; ),
  ISBLANK(  Address ),
  ISBLANK(   Description  ),
  ISPICKVAL(   Current_Architecture__c, &quot;None&quot;  ),
  ISPICKVAL(    Project_Timeframe__c , &quot;None&quot;  ),
  ISPICKVAL(     Project_Phase__c  , &quot;None&quot;  ),
  ISPICKVAL(      Job_Function__c , &quot;None&quot;  ),
  ISPICKVAL(    Project_Size__c , &quot;None&quot;  )
 
)</errorConditionFormula>
        <errorMessage>Please enter Address Line 1, City, State, Country, Lead Detail and Job function prior to converting lead to SAL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISCHANGED( Status ),
  NOT(ISPICKVAL(PRIORVALUE( Status ), &quot;Sales Accepted Lead&quot;)),
  ISPICKVAL( Status, &quot;Sales Qualified Lead&quot;)
)</errorConditionFormula>
        <errorMessage>Please Change status to &quot;Sales Accepted Lead&quot; before &quot;Sales Qualified Lead&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lead_state_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED( Status ), 
NOT(ISPICKVAL(PRIORVALUE(  Lead_State__c ), &quot;Closed&quot;)), 
ISPICKVAL( Status, &quot;Sales Qualified Lead&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Lead_State__c</errorDisplayField>
        <errorMessage>Please ensure Lead State is Closed prior to changing Stage to &quot;Sales Qualified Lead&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rejection_reason_comment_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Lead_State__c, &quot;Rejected&quot; ),
  ISBLANK( Rejection_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Rejection__c</errorDisplayField>
        <errorMessage>Please enter Rejection Reason and Comment</errorMessage>
    </validationRules>
</CustomObject>